# pid_assiant

./: README.md
PID_Assiant/: .vimspector.json  CMakeLists.txt  package.xml  readme.md  start.sh  test.json
PID_Assiant/.clangd/index/: base_local_planner.h.4015F4ECF90B82BE.idx  chart.cpp.9EAD46E038D093BC.idx  chart.h.C66630B75DA10EDE.idx  display.cpp.E26719AA01CC6AE3.idx  display.h.40570B169AC06DB1.idx  main.cpp.406170DFD26B41B2.idx  mainwindow.cpp.AD6409A83D3DCD0D.idx  mainwindow.h.769FD96798141870.idx  msgs.hpp.A4282683F2B34FFC.idx  pid_controller.cpp.81BF9B5DECD568EE.idx  pid_controller.h.36864AC2E34F074B.idx  robot.cpp.70E74261C4780269.idx  robot.h.B613CF5988AB4F23.idx  robot_master.cpp.874EBC85BE5AE535.idx  robot_master.h.FCEFC83C64547CA8.idx  tcp_connect.cpp.CBA5A48FBC52B02E.idx  tcp_connect.h.F79B3CE5C70EB740.idx  tcp_sever_test.cpp.7901EAF782723519.idx  terminalpage.cpp.ECA3B84485E7C3A7.idx  terminalpage.h.E8B516C8D238582F.idx  toolpage.cpp.D21E8707D5AA9C3F.idx  toolpage.h.AA7CABBE7F0F23AE.idx  types.cpp.33C9B4A19D56B377.idx  types.h.D34654FEC72E7D4F.idx
PID_Assiant/cmake/: qtermwidget5-targets.cmake
PID_Assiant/include/: base_local_planner.h  chart.h  display.h  mainwindow.h  msgs.hpp  pid_controller.h  robot.h  robot_master.h  tcp_connect.h  terminalpage.h  toolpage.h  trajectory_tracking.h  types.h
PID_Assiant/resources/: pid_controller.json  project_config.json
PID_Assiant/src/: chart.cpp  display.cpp  main.cpp  mainwindow.cpp  pid_controller.cpp  robot.cpp  robot_master.cpp  tcp_connect.cpp  tcp_sever_test.cpp  terminalpage.cpp  toolpage.cpp  trajectory_tracking.cpp  types.cpp
PID_Assiant/template/: RobotPID.json
PID_Assiant/ui/: display.ui  mainwindow.ui  robot.ui  terminalpage.ui  toolpage.ui
nav_assiant_sever_ws/devel/: .catkin  local_setup.sh
nav_assiant_sever_ws/devel/include/dg_msgs/: AcquisitionTaskAction.h  AcquisitionTaskActionFeedback.h  AcquisitionTaskActionGoal.h  AcquisitionTaskActionResult.h  AcquisitionTaskFeedback.h  AcquisitionTaskGoal.h  AcquisitionTaskResult.h  AlterPose.h  AlterPoseAndJoints.h  AntiCollisionWheelManualControl.h  AntiCollisionWheelState.h  AssembleState.h  BogieAligning.h  BogieAligningRequest.h  BogieAligningResponse.h  BogieModel.h  BogieModelRequest.h  BogieModelResponse.h  BollardHoming.h  BollardHomingRequest.h  BollardHomingResponse.h  BollardManualControl.h  BollardOperationAction.h  BollardOperationActionFeedback.h  BollardOperationActionGoal.h  BollardOperationActionResult.h  BollardOperationFeedback.h  BollardOperationGoal.h  BollardOperationResult.h  BollardPauseRecvTerm.h  BollardPauseRecvTermRequest.h  BollardPauseRecvTermResponse.h  BollardState.h  CPUMemNetState.h  CameraDataCollect.h  CameraDataCollectRequest.h  CameraDataCollectResponse.h  CameraInfo.h  CameraPcdFlag.h  CameraPcdFlagRequest.h  (+255 more)
nav_assiant_sever_ws/devel/include/photinia_msgs/: MoveToGoalAction.h  MoveToGoalActionFeedback.h  MoveToGoalActionGoal.h  MoveToGoalActionResult.h  MoveToGoalFeedback.h  MoveToGoalGoal.h  MoveToGoalResult.h  PIDParams.h  PIDParams_srv.h  PIDParams_srvRequest.h  PIDParams_srvResponse.h
nav_assiant_sever_ws/devel/lib/pkgconfig/: dg_msgs.pc  photinia_msgs.pc  sever.pc
nav_assiant_sever_ws/devel/lib/sever/: pid_server
nav_assiant_sever_ws/devel/share/dg_msgs/cmake/: dg_msgs-msg-paths.cmake  dg_msgsConfig.cmake
nav_assiant_sever_ws/devel/share/dg_msgs/msg/: AcquisitionTaskAction.msg  AcquisitionTaskActionFeedback.msg  AcquisitionTaskActionGoal.msg  AcquisitionTaskActionResult.msg  AcquisitionTaskFeedback.msg  AcquisitionTaskGoal.msg  AcquisitionTaskResult.msg  BollardOperationAction.msg  BollardOperationActionFeedback.msg  (+24 more)
nav_assiant_sever_ws/src/dg_msgs/: .gitignore  CMakeLists.txt  README.md
nav_assiant_sever_ws/src/dg_msgs/action/: AcquisitionTask.action  BollardOperation.action
nav_assiant_sever_ws/src/dg_msgs/msg/: AlterPose.msg  AlterPoseAndJoints.msg  AntiCollisionWheelManualControl.msg  AntiCollisionWheelState.msg  AssembleState.msg  BollardManualControl.msg  BollardState.msg  CPUMemNetState.msg  CameraInfo.msg  ChassisInfo.msg  ChassisState.msg  CorrectionJoint.msg  CorrectionPoint.msg  CropBox.msg  DiskState.msg  EquipmentCommon.msg  EquipmentGroup.msg  GeneralHardwareAndNodeState.msg  HardwareAndNodeState.msg  ImageGoal.msg  ImagePoint.msg  ImageResult.msg  Localization3D.msg  MonitorState.msg  NetworkCardState.msg  NetworkedDevicesState.msg  NotificationInfo.msg  PointSequence.msg  ROSTopicState.msg  RobotArmInfo.msg  RobotAuth.msg  RobotInfo.msg  SlideTableInfo.msg  TeachDataInfo.msg  TeachDataInfoArray.msg  TrainDataSet.msg  UniversalStateInfo.msg
nav_assiant_sever_ws/src/dg_msgs/srv/: BogieAligning.srv  BollardHoming.srv  BollardPauseRecvTerm.srv  CameraDataCollect.srv  CameraPcdFlag.srv  CameraTargetOrder.srv  CarBasePauseRecovery.srv  ChannelAligning.srv  ChassisStateSrv.srv  CollisionTest.srv  CurrentImagePoint.srv  CurrentPoseAndFrame.srv  CurrentTeachingStopLocation.srv  EmergencyStop.srv  FastLioOdometry.srv  FindPoints.srv  GetAssembleState.srv  GetBollardState.srv  GetCurrentMapList.srv  GetNavMode.srv  GetSetAntiCollisionWheel.srv  GetSetLightBarColor.srv  HardwareAndNodeStateDiagnosis.srv  Interploate.srv  LidarDataCollect.srv  LiftkitLimitPosition.srv  LiftkitUpDown.srv  MoveToNavPoint.srv  PcdRegistration.srv  PresetStopLocation.srv  ReturnJointAnglesAndPose.srv  RobotArmAcqModelLoad.srv  RobotArmAcqMove.srv  RobotArmAcqPauseRecovery.srv  RobotArmAcqReady.srv  RobotArmClearError.srv  RobotArmEnable.srv  RobotArmHomeCheck.srv  RobotArmPlay.srv  RobotArmRest.srv  (+28 more)
nav_assiant_sever_ws/src/photinia_msgs/: CMakeLists.txt
nav_assiant_sever_ws/src/photinia_msgs/msg/: PIDParams.msg
nav_assiant_sever_ws/src/photinia_msgs/srv/: PIDParams_srv.srv
nav_assiant_sever_ws/src/sever/: CMakeLists.txt
nav_assiant_sever_ws/src/sever/include/: base_local_planner.h  pid_controller.h  std_function.h  tcp_connect.h
nav_assiant_sever_ws/src/sever/src/: main.cpp  move_base.cpp  move_base_backup.cpp  pid_controller.cpp  pid_sever.cpp  pid_test.cpp  std_function.cpp  tcp_connect.cpp
(+783 files in other folders)
